delete: removed unnecessary old version of backend
