# backend/routes/hotelRoutes.js
@@ -1,15 +1,19 @@
 const express = require('express');
-const {
-  createHotel,
-  loginHotel,
-  getHotelProfile,
-} = require('../controller/hotelController');
-const { protectHotel } = require('../middleware/authMiddleware');
-
 const router = express.Router();
 
-router.post('/register', createHotel);
-router.post('/login', loginHotel);
-router.get('/profile', protectHotel, getHotelProfile);
+const { createHotel } = require('../controllers/HotelController/createHotel');
+const {
+  deleteAllHotel,
+  deleteHotel,
+} = require('../controllers/HotelController/deleteHotel');
+
+const authorize = require('../middlewares/authorize');
+const authenticate = require('../middlewares/authenticate');
+const { getAllHotels } = require('../controllers/HotelController/getHotels');
+
+router.get('/', getAllHotels);
+router.post('/create-hotel', authenticate, authorize(['owner']), createHotel);
+router.delete('/:id', authenticate, authorize(['owner']), deleteAllHotel);
+router.delete('/', authenticate, authorize(['owner']), deleteHotel);
 
 module.exports = router;
